fix using deprecated method in test case